--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@angular/platform-browser": "7.1.1",
     "@angular/platform-browser-dynamic": "7.1.1",
     "@angular/router": "7.1.1",
-    "@babel/runtime": "7.1.5",
+    "@babel/runtime": "^7.1.5",
     "core-js": "2.5.7",
     "meteor-node-stubs": "0.4.1",
-    "meteor-rxjs": "0.4.14",
+    "meteor-rxjs": "^0.4.14",
     "rxjs": "6.3.3",
     "zone.js": "0.8.26"
   },
