--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "test:ci": "TEST_BROWSER_DRIVER=puppeteer meteor test --driver-package=ardatan:mocha --raw-logs --once"
   },
   "dependencies": {
-    "@angular/common": "7.1.1",
+    "@angular/common": "^7.1.4",
     "@angular/compiler": "7.1.1",
-    "@angular/core": "7.1.1",
+    "@angular/core": "^7.1.4",
     "@angular/forms": "7.1.1",
+    "@angular/http": "^7.1.4",
     "@angular/platform-browser": "7.1.1",
     "@angular/platform-browser-dynamic": "7.1.1",
     "@angular/router": "7.1.1",
