--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@angular/core": "^7.1.4",
     "@angular/forms": "^7.1.4",
     "@angular/http": "^7.1.4",
-    "@angular/platform-browser": "7.1.1",
+    "@angular/platform-browser": "^7.1.4",
     "@angular/platform-browser-dynamic": "7.1.1",
     "@angular/router": "7.1.1",
     "@babel/runtime": "^7.1.5",
