--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@angular/forms": "^7.1.4",
     "@angular/http": "^7.1.4",
     "@angular/platform-browser": "^7.1.4",
-    "@angular/platform-browser-dynamic": "7.1.1",
+    "@angular/platform-browser-dynamic": "^7.1.4",
     "@angular/router": "7.1.1",
     "@babel/runtime": "^7.1.5",
     "core-js": "2.5.7",
