--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@angular/http": "^7.1.4",
     "@angular/platform-browser": "^7.1.4",
     "@angular/platform-browser-dynamic": "^7.1.4",
-    "@angular/router": "7.1.1",
+    "@angular/router": "^7.1.4",
     "@babel/runtime": "^7.1.5",
     "core-js": "2.5.7",
     "meteor-node-stubs": "0.4.1",
