--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@angular/common": "^7.1.4",
-    "@angular/compiler": "7.1.1",
+    "@angular/compiler": "^7.1.4",
     "@angular/core": "^7.1.4",
     "@angular/forms": "^7.1.4",
     "@angular/http": "^7.1.4",
